Code clean up after review

--- a/src/ggrc/assets/mustache/assessments/modal_content.mustache
+++ b/src/ggrc/assets/mustache/assessments/modal_content.mustache
@@ -32,11 +32,17 @@
       </div>-->
       <div class="ggrc-form-item">
         <div class="ggrc-form-item__row {{#instance.computed_errors.title}}field-failure{{/instance.computed_errors.title}}">
-          <label class="required-label ggrc-form-item__label">
+          <label class="form-label required-label ggrc-form-item__label">
             Title
             <i class="fa fa-asterisk"></i> 
           </label>
-          <input data-id="title_txtbx" tabindex="2" class="input-block-level" placeholder="Enter Title" name="title" type="text" value="{{title}}" autofocus>
+          <input data-id="title_txtbx"
+            tabindex="2"
+            class="input-block-level"
+            placeholder="Enter Title"
+            name="title"
+            type="text"
+            {$value}="title" autofocus>
           {{#instance.computed_errors.title}}<label class="help-inline warning">{{this}}</label>{{/instance.computed_errors.title}}
         </div>
       </div>
