--- a/src/ggrc/assets/mustache/components/assessment/assessment-people.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/assessment-people.mustache
@@ -53,7 +53,7 @@
               {group-id}="type"
               {instance}="instance"
               {people}="results">
-              <label class="required-label people-group__title">
+              <label class="form-label required-label people-group__title">
                 {{title}}
                 {{#if required}}
                   <form-validation-icon {validation}="validation"></form-validation-icon>
