--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -160,11 +160,11 @@
                                                  (on-state-change)="onStateChange(%event)"
                     ></assessment-controls-toolbar>
                 </div>
-                <div class="info-pane__body-section">
+                <div class="info-pane__section">
                     <assessment-people {instance}="instance">
                     </assessment-people>
                 </div>
-                <div class="info-pane__body-section">
+                <div class="info-pane__section">
                     <div class="info-pane__section-title">
                        <div class="action-toolbar">
                           <div class="action-toolbar__content-item">Related Information</div>
