Add filter to related-people-access-control component

--- a/src/ggrc/assets/mustache/components/people/editable-people-group.mustache
+++ b/src/ggrc/assets/mustache/components/people/editable-people-group.mustache
@@ -12,7 +12,7 @@
     {{title}}
   </span>
   {{#if required}}
-    <form-validation-icon {validation}="validation"></form-validation-icon>
+    <i class="fa fa-asterisk"></i>
   {{/if}}
   {{#unless editableMode}}
     <div class="action-toolbar__controls">
