--- a/src/ggrc/assets/stylesheets/components/people-group/_people-group.scss
+++ b/src/ggrc/assets/stylesheets/components/people-group/_people-group.scss
@@ -44,6 +44,10 @@
       margin-bottom: 3px;
     }
 
+    .people-group__readonly-person {
+      line-height: 22px;
+    }
+
     .person-name {
       overflow: hidden;
       white-space: nowrap;
