--- a/src/ggrc/assets/mustache/components/people/deletable-people-group.mustache
+++ b/src/ggrc/assets/mustache/components/people/deletable-people-group.mustache
@@ -8,7 +8,7 @@
 
   <div class="people-list">
     <object-list ({items})="people" {empty-message}="emptyListMessage" {is-disabled}="isLoading">
-      <div class="deletable-people-group__person action-toolbar">
+      <div class="action-toolbar {{#unless canUnmap}}people-group__readonly-person{{/unless}}">
         <person-list-item person="{.}" {with-details}="withDetails">
           {{#unless isDisabled}}
             {{#unmapablePerson}}
