Display editable-people group on all info panes and modals

--- a/src/ggrc/assets/mustache/clauses/modal_content.mustache
+++ b/src/ggrc/assets/mustache/clauses/modal_content.mustache
@@ -10,7 +10,7 @@
   {{> /static/mustache/base_objects/form_restore.mustache}}
 
   <div class="row-fluid">
-    <div class="span6">
+    <div>
       <label>
         Title
         <span class="required">*</span>
@@ -25,7 +25,7 @@
   </div>
 
   <div class="row-fluid">
-    <div data-id="text_of_clause_hidden" class="span6 hidable">
+    <div data-id="text_of_clause_hidden" class="hidable">
       <label>
         Text of Clause
         <i class="fa fa-question-circle" rel="tooltip" title="Enter text of clause"></i>
@@ -42,12 +42,9 @@
       <access-control-list-admin-helper
         {instance}="."
         {is-new-instance}="new_object_form">
-        <access-control-list
-          {instance}="instance"
-          {is-new-instance}="isNewInstance"
-          top-wrapper-class="'span12'"
-          role-block-class="'span6'">
-        </access-control-list>
+          <custom-roles {instance}="instance"
+            {is-new-instance}="new_object_form">
+          </custom-roles>
       </access-control-list-admin-helper>
     </div>
   </div>
