--- a/src/ggrc/assets/mustache/base_objects/contacts.mustache
+++ b/src/ggrc/assets/mustache/base_objects/contacts.mustache
@@ -4,35 +4,34 @@
 }}
 
 {{#instance}}
-<div class="row-fluid wrap-row">
-  <div data-test-id="title_manager_7a906d2e" class="span6">
-    {{#if is_program}}
-    <h6>Manager</h6>
-    <p class="oneline">
-      {{#with_mapping 'authorizations' instance}}
-        {{#if authorizations.length}}
-          {{#each authorizations}}
-            <span>
-              {{#using role=instance.role}}
-                {{#if_equals role.name 'ProgramOwner'}}
-                  {{#using contact=instance.person}}
-                    {{{renderLive '/static/mustache/people/popover.mustache' person=contact}}}
+  {{#if is_program}}
+    <div class="row-fluid wrap-row">
+      <div data-test-id="title_manager_7a906d2e" class="span6">
+        <h6>Manager</h6>
+        <p class="oneline">
+          {{#with_mapping 'authorizations' instance}}
+            {{#if authorizations.length}}
+              {{#each authorizations}}
+                <span>
+                  {{#using role=instance.role}}
+                    {{#if_equals role.name 'ProgramOwner'}}
+                      {{#using contact=instance.person}}
+                        {{{renderLive '/static/mustache/people/popover.mustache' person=contact}}}
+                      {{/using}}
+                    {{/if_equals}}
                   {{/using}}
-                {{/if_equals}}
-              {{/using}}
-            </span>
-          {{/each}}
-        {{else}}
-          <span class="empty-message">None</span>
-        {{/if}}
-      {{/with_mapping}}
-    </p>
-    {{/if}}
-    <access-control-list
-        instance="."
-        autosave="true"
-        top-wrapper-class="'span12'">
-    </access-control-list>
+                </span>
+              {{/each}}
+            {{else}}
+              <span class="empty-message">None</span>
+            {{/if}}
+          {{/with_mapping}}
+        </p>
+      </div>
+    </div>
+  {{/if}}
+  <div class="row-fluid wrap-row">
+    <custom-roles {instance}="." info-pane-mode="true">
+    </custom-roles>
   </div>
-</div>
 {{/instance}}
