--- a/src/ggrc/assets/mustache/issues/modal_content.mustache
+++ b/src/ggrc/assets/mustache/issues/modal_content.mustache
@@ -46,7 +46,7 @@
   </div>
 
   <div class="row-fluid">
-    <div data-id="description_hidden" class="span6 hidable">
+    <div data-id="description_hidden" class="hidable">
       <label>
         Description
         <i class="fa fa-question-circle" rel="tooltip" title="Provide more details on the purpose of this {{model.model_singular}} and provide context for how and when this {{model.model_singular}} might be used."></i>
@@ -60,7 +60,7 @@
 
 
     <div class="row-fluid">
-      <div data-id="test_plan_hidden" class="span6 hidable">
+      <div data-id="test_plan_hidden" class="hidable">
         <label>
           Test Plan
           <i class="fa fa-question-circle" rel="tooltip" title="Provide a test plan for this {{model.model_singular}}."></i>
@@ -77,12 +77,9 @@
       <access-control-list-admin-helper
         {instance}="."
         {is-new-instance}="new_object_form">
-        <access-control-list
-          {instance}="instance"
-          {is-new-instance}="isNewInstance"
-          top-wrapper-class="'span12'"
-          role-block-class="'span6'">
-        </access-control-list>
+          <custom-roles {instance}="instance"
+            {is-new-instance}="new_object_form">
+          </custom-roles>
       </access-control-list-admin-helper>
     </div>
   </div>
