--- a/src/ggrc/assets/mustache/sections/modal_content.mustache
+++ b/src/ggrc/assets/mustache/sections/modal_content.mustache
@@ -38,7 +38,7 @@
   </div>
 
   <div class="row-fluid">
-    <div data-id="text_of_section_hidden" class="span6 hidable">
+    <div data-id="text_of_section_hidden" class="hidable">
       <label>
         Text of Section
         <i class="fa fa-question-circle" rel="tooltip" title="Enter text of section"></i>
@@ -55,12 +55,9 @@
       <access-control-list-admin-helper
         {instance}="."
         {is-new-instance}="new_object_form">
-        <access-control-list
-          {instance}="instance"
-          {is-new-instance}="isNewInstance"
-          top-wrapper-class="'span12'"
-          role-block-class="'span6'">
-        </access-control-list>
+          <custom-roles {instance}="instance"
+            {is-new-instance}="new_object_form">
+          </custom-roles>
       </access-control-list-admin-helper>
     </div>
   </div>
