--- a/src/ggrc_risks/assets/mustache/risks/modal_content.mustache
+++ b/src/ggrc_risks/assets/mustache/risks/modal_content.mustache
@@ -10,7 +10,7 @@
   {{> /static/mustache/base_objects/form_restore.mustache}}
 
   <div class="row-fluid">
-    <div class="span6 {{#instance.computed_errors.title}}field-failure{{/instance.computed_errors.title}}">
+    <div class="{{#instance.computed_errors.title}}field-failure{{/instance.computed_errors.title}}">
       <label>
         Title
         <span class="required">*</span>
@@ -30,7 +30,7 @@
   </div>
 
   <div class="row-fluid">
-    <div class="span6 {{#instance.computed_errors.description}}field-failure{{/instance.computed_errors.description}}">
+    <div class="{{#instance.computed_errors.description}}field-failure{{/instance.computed_errors.description}}">
       <label>
         Description
         <span class="required">*</span>
@@ -55,12 +55,9 @@
       <access-control-list-admin-helper
         {instance}="."
         {is-new-instance}="new_object_form">
-        <access-control-list
-          {instance}="instance"
-          {is-new-instance}="isNewInstance"
-          top-wrapper-class="'span12'"
-          role-block-class="'span6'">
-        </access-control-list>
+          <custom-roles {instance}="instance"
+            {is-new-instance}="new_object_form">
+          </custom-roles>
       </access-control-list-admin-helper>
     </div>
   </div>
