--- a/src/ggrc/assets/mustache/components/custom-roles/custom-roles.mustache
+++ b/src/ggrc/assets/mustache/components/custom-roles/custom-roles.mustache
@@ -15,6 +15,7 @@
       <div class="people-groups">
         {{#accessControlGroups}}
           <related-people-access-control-group
+            {required}="required"
             {group-id}="groupId"
             {title}="title"
             {people}="people"
@@ -24,12 +25,14 @@
           <div>
             {{#if infoPaneMode}}
               <editable-people-group
+                {required}="required"
                 (unmap)="removePerson(%event)"
                 (change-editable-mode)="changeEditableGroup(%event)"
                 (save-changes)="saveChanges()"
                 (person-selected)="personSelected(%event)"
                 {editable-mode}="editableMode"
                 {can-unmap}="canEdit"
+                {can-edit}="canEdit"
                 {is-loading}="isUpdating"
                 {group-id}="groupId"
                 {instance}="instance"
@@ -39,6 +42,7 @@
             {{else}}
               <deletable-people-group
                 show-empty-message="false"
+                {required}="required"
                 (unmap)="removePerson(%event)"
                 {can-unmap}="canEdit"
                 {is-loading}="isUpdating"
