--- a/src/ggrc/assets/mustache/sections/modal_content.mustache
+++ b/src/ggrc/assets/mustache/sections/modal_content.mustache
@@ -56,6 +56,7 @@
         {instance}="."
         {is-new-instance}="new_object_form">
           <custom-roles {instance}="instance"
+            is-modal="true"
             {is-new-instance}="new_object_form">
           </custom-roles>
       </access-control-list-admin-helper>
