--- a/src/ggrc/assets/stylesheets/modules/_modal.scss
+++ b/src/ggrc/assets/stylesheets/modules/_modal.scss
@@ -419,6 +419,9 @@
       label {
         color: $red;
       }
+      select {
+        border: 1px solid $red;
+      }
       .help-inline {
         margin: -8px 0 8px 0;
         display: block;
