--- a/src/ggrc/assets/stylesheets/modules/_assessment.scss
+++ b/src/ggrc/assets/stylesheets/modules/_assessment.scss
@@ -72,31 +72,52 @@
     }
 
     .pane-header {
-      h6 {
-        margin: 0;
-      }
+      display: flex;
+      height: 70px;
+
       .pane-header__title {
-        line-height: 24px;
-        display: flex;
+        margin-right: 30%;
+        padding-right: 32px;
+        width: 100%;
 
-        h3 {
-          line-height: 24px;
-          margin: 0;
-          box-sizing: border-box;
-          padding: 0 16px 0 0;
-        }
+        .pane-header__title-body {
+          display: flex;
+          align-items: center;
 
-        i.fa {
-          line-height: 24px;
-          width: 24px;
+          .pane-header__title-name {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            max-width: 550px;
+          }
         }
 
         .state-value {
           box-sizing: border-box;
           min-height: 22px;
-          margin: 0 16px 0 0;
-          line-height: 22px;
+          white-space: nowrap;
           align-self: center;
+          margin-right: 16px;
+        }
+      }
+
+      .pane-header__action-buttons {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        padding-left: 16px;
+        padding-bottom: 20px;
+        width: 30%;
+        flex-direction: column;
+
+        .object-state-toolbar__info-pin-state {
+          display: block;
+          margin-top: 40px;
+        }
+
+        .details-wrap {
+          margin-top: 40px !important;
         }
       }
     }
