--- a/src/ggrc/assets/mustache/components/inline/inline.mustache
+++ b/src/ggrc/assets/mustache/components/inline/inline.mustache
@@ -27,7 +27,42 @@
   {{#if editMode}}
     <div class="inline__content-wrapper">
       <div class="inline__content inline--active">
-        {{#renderInnerInlineTemplate type}}{{/renderInnerInlineTemplate}}
+
+        {{#switch type}}
+          {{#case 'dropdown'}}
+            <dropdown-form-field {value}="value"
+              {options}="dropdownOptions"
+              (value-changed)="fieldValueChanged(%event)"
+            ></dropdown-form-field>
+          {{/case}}
+          {{#case 'input'}}
+            <text-form-field {value}="value"
+              {placeholder}="placeholder"
+              (value-changed)="fieldValueChanged(%event)"
+            ></text-form-field>
+          {{/case}}
+          {{#case 'text'}}
+            <rich-text-form-field {value}="value"
+              {placeholder}="placeholder"
+              (value-changed)="fieldValueChanged(%event)"
+            ></rich-text-form-field>
+          {{/case}}
+           {{#case 'checkbox'}}
+            <checkbox-form-field {value}="value"
+              (value-changed)="fieldValueChanged(%event)"
+            ></checkbox-form-field>
+          {{/case}}
+           {{#case 'date'}}
+            <date-form-field {value}="value"
+              (value-changed)="fieldValueChanged(%event)"
+            ></date-form-field>
+          {{/case}}
+          {{#case 'person'}}
+            <person-form-field {value}="value"
+              (value-changed)="fieldValueChanged(%event)"
+            ></person-form-field>
+          {{/case}}
+        {{/switch}}
 
         <ul class="inline__controls">
           <li class="inline__controls-item">
