Remove is_allowed helper from people groups

--- a/src/ggrc/assets/mustache/components/custom-roles/custom-roles-modal.mustache
+++ b/src/ggrc/assets/mustache/components/custom-roles/custom-roles-modal.mustache
@@ -43,13 +43,13 @@
                   {{#if isUpdating}}
                     <spinner {toggle}="isUpdating"></spinner>
                   {{else}}
-                    {{#is_allowed 'update' instance}}
+                    {{#if canEdit}}
                       <autocomplete
                           search-items-type="Person"
                           (item-selected)="addPerson(%event.selectedItem, @groupId)"
                           placeholder="Add person">
                       </autocomplete>
-                    {{/is_allowed}}
+                    {{/if}}
                   {{/if}}
                 </div>
               </div>
