--- a/src/ggrc/assets/mustache/issues/modal_content.mustache
+++ b/src/ggrc/assets/mustache/issues/modal_content.mustache
@@ -56,15 +56,7 @@
         <textarea tabindex="2" id="control_description" class="span12 triple wysihtml5" name="description" placeholder="Enter Description">{{{description}}}</textarea>
       </div>
     </div>
-
-    <div class="span6 hide-wrap hidable">
-      <div class="row-fluid inner-hide">
-        <div data-id="owner_hidden" class="span12 hidable bottom-spacing">
-          {{> /static/mustache/people/owners_modal_connector.mustache}}
-        </div>
-      </div>
-    </div>
-    </div>
+  </div>
 
 
     <div class="row-fluid">
@@ -82,12 +74,14 @@
 
   <div class="row">
     <div class="span12 hide-wrap hidable">
-      <access-control-list
-          instance="."
-          {is-new-instance}="new_object_form"
-          top-wrapper-class="'span12'"
-          role-block-class="'span6'">
-      </access-control-list>
+      <access-control-list-roles-helper
+        {instance}="."
+        {is-new-instance}="new_object_form">
+          <custom-roles-modal
+            {instance}="instance"
+            {is-new-instance}="isNewInstance">
+          </custom-roles-modal>
+      </access-control-list-roles-helper>
     </div>
   </div>
 
