Update assessment's pin open behavior

--- a/src/ggrc/assets/stylesheets/modules/_info-pin.scss
+++ b/src/ggrc/assets/stylesheets/modules/_info-pin.scss
@@ -13,6 +13,7 @@
   background: $white;
   z-index: zIndex(pin-content);
   overflow: auto;
+  transition: height 0.3s ease-in, z-index 0.3s ease-in, opacity 0.3s ease-in;
 
   .info {
     box-shadow: none;
