Add visible-items-limiter components

--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -46,3 +46,4 @@
 @import "components/form/ggrc-form";
 @import "components/inline/inline";
 @import "components/related-objects/related-reference-urls";
+@import "components/visible-items-limiter/visible-items-limiter"
