--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -39,10 +39,12 @@
                           {{/unless}}
                         </div>
                     </div>
-                    <assessment-mapped-controls class="mapped-objects__list info-pane__section-content"
-                            {instance}="instance"
-                            {mapped-items}="controls"
-                            title-text="Controls"></assessment-mapped-controls>
+                    <visible-items-limiter {items}="controls">
+                        <assessment-mapped-controls class="mapped-objects__list info-pane__section-content"
+                                {instance}="instance"
+                                {mapped-items}="visibleItems"
+                                title-text="Controls"></assessment-mapped-controls>
+                    </visible-items-limiter>
                 </div>
                 <div class="assessment-controls info-pane__section">
                     <div class="assessment-note">
@@ -59,19 +61,21 @@
                                 <spinner class="info-pane__section-title-icon" {toggle}="isUpdatingEvidences"></spinner>
                                 Evidence
                             </div>
-                            <object-list {items}="evidences" {empty-message}="noItemsText">
-                                <editable-document-object-list-item {document}="{.}">
-                                    <action-toolbar-control>
-                                        <unmap-button
-                                            (before-unmap)="removeItem(%event, 'evidences')"
-                                            (after-unmap)="updateItems('evidences')"
-                                            {destination}="instance"
-                                            {source}="document">
-                                            <i class="fa fa-trash"></i>
-                                        </unmap-button>
-                                    </action-toolbar-control>
-                                </editable-document-object-list-item>
-                            </object-list>
+                            <visible-items-limiter {items}="evidences">
+                                <object-list {items}="visibleItems" {empty-message}="noItemsText">
+                                    <editable-document-object-list-item {document}="{.}">
+                                        <action-toolbar-control>
+                                            <unmap-button
+                                                (before-unmap)="removeItem(%event, 'evidences')"
+                                                (after-unmap)="updateItems('evidences')"
+                                                {destination}="instance"
+                                                {source}="document">
+                                                <i class="fa fa-trash"></i>
+                                            </unmap-button>
+                                        </action-toolbar-control>
+                                    </editable-document-object-list-item>
+                                </object-list>
+                            </visible-items-limiter>
                             <attach-button
                                         (before-create)="addItems(%event, 'evidences')"
                                         (refresh-evidences)="updateItems('evidences')"
@@ -83,19 +87,21 @@
                                 <spinner class="info-pane__section-title-icon" {toggle}="isUpdatingUrls"></spinner>
                                 URL
                             </div>
-                            <object-list {items}="urls" {empty-message}="noItemsText">
-                                <editable-document-object-list-item {document}="{.}">
-                                    <action-toolbar-control>
-                                      <unmap-button
-                                            (before-unmap)="removeItem(%event, 'urls')"
-                                            (after-unmap)="updateItems('urls')"
-                                            {destination}="instance"
-                                            {source}="document">
-                                            <i class="fa fa-trash"></i>
-                                      </unmap-button>
-                                    </action-toolbar-control>
-                                </editable-document-object-list-item>
-                            </object-list>
+                            <visible-items-limiter {items}="urls">
+                                <object-list {items}="visibleItems" {empty-message}="noItemsText">
+                                    <editable-document-object-list-item {document}="{.}">
+                                        <action-toolbar-control>
+                                        <unmap-button
+                                                (before-unmap)="removeItem(%event, 'urls')"
+                                                (after-unmap)="updateItems('urls')"
+                                                {destination}="instance"
+                                                {source}="document">
+                                                <i class="fa fa-trash"></i>
+                                        </unmap-button>
+                                        </action-toolbar-control>
+                                    </editable-document-object-list-item>
+                                </object-list>
+                            </visible-items-limiter>
                           {{#unless instance.archived}}
                             {{#is_allowed 'update' instance context='for'}}
                             {{#toggle show_new_object_form}}
@@ -187,10 +193,12 @@
                          {{/unless}}
                         </div>
                     </div>
-                    <assessment-mapped-related-information class="mapped-objects__list info-pane__section-content"
-                            {instance}="instance"
-                            {mapped-items}="relatedInformation"
-                            title-text="Related Information"></assessment-mapped-related-information>
+                    <visible-items-limiter {items}="relatedInformation">
+                        <assessment-mapped-related-information class="mapped-objects__list info-pane__section-content"
+                                {instance}="instance"
+                                {mapped-items}="visibleItems"
+                                title-text="Related Information"></assessment-mapped-related-information>
+                    </visible-items-limiter>
                 </div>
             </div>
             <div class="assessment-comments info-pane__sidebar">
@@ -303,7 +311,61 @@
                         </div>
                         <div class="ggrc-form-item">
                             <div class="ggrc-form-item__row">
-                                {{>'/static/mustache/base_objects/urls.mustache'}}
+                                <div class="info-pane__section-title">
+                                    <spinner class="info-pane__section-title-icon" {toggle}="isUpdatingReferenceUrls">
+                                    </spinner>
+                                    Reference Url
+                                </div>
+                                <visible-items-limiter {items}="referenceUrls">
+                                    <object-list {items}="visibleItems" {empty-message}="noItemsText">
+                                        <editable-document-object-list-item {document}="{.}">
+                                            <action-toolbar-control>
+                                            <unmap-button
+                                                    (before-unmap)="removeItem(%event, 'referenceUrls')"
+                                                    (after-unmap)="updateItems('referenceUrls')"
+                                                    {destination}="instance"
+                                                    {source}="document">
+                                                    <i class="fa fa-trash"></i>
+                                            </unmap-button>
+                                            </action-toolbar-control>
+                                        </editable-document-object-list-item>
+                                    </object-list>
+                                </visible-items-limiter>
+                                {{#unless isEditDenied}}
+                                    {{#toggle show_new_object_form}}
+                                        <ggrc-quick-add
+                                                (before-create)="addItems(%event, 'referenceUrls')"
+                                                (after-create)="updateItems('referenceUrls')"
+                                                {parent_instance}="instance"
+                                                url-type="REFERENCE_URL"
+                                                join_model="Relationship"
+                                                quick_create="create_url">
+                                        {{#prune_context}}
+                                            <div class="inline-edit inline-edit--active">
+                                                <div class="inline-edit__content">
+                                                    <input type="text" name="instance" placeholder="Add Reference Url">
+                                                    <input type="hidden" name="role_name" value="Auditor"/>
+                                                    <ul class="inline-edit__controls inline-edit__controls--edit-mode">
+                                                        <li>
+                                                            <a href="javascript://" class="{{#if disabled}}disabled{{/if}}"
+                                                                data-toggle="submit" {{toggle_button 'modal:success'}}>
+                                                                <i class="fa fa-check"></i>
+                                                            </a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="javascript://" {{toggle_button}}>
+                                                                <i class="fa fa-times"></i>
+                                                            </a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        {{/prune_context}}
+                                        </ggrc-quick-add>
+                                    {{else}}
+                                        <button class="btn btn-small btn-gray" {{toggle_button}}>Add</button>
+                                    {{/toggle}}
+                                {{/unless}}
                             </div>
                         </div>
                     </div>
