--- a/src/ggrc/assets/mustache/components/assessment/mapped-objects/mapped-comments.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/mapped-objects/mapped-comments.mustache
@@ -2,6 +2,8 @@
     Copyright (C) 2017 Google Inc., authors, and contributors
     Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 }}
-<object-list {items}="mappedItems" {empty-message}="noItemsText" class="object-list__limited-height">
-    <comment-list-item {instance}="{.}"></comment-list-item>
-</object-list>
+<visible-items-limiter {items}="mappedItems">
+    <object-list {items}="visibleItems" {empty-message}="noItemsText" class="object-list__limited-height">
+        <comment-list-item {instance}="{.}"></comment-list-item>
+    </object-list>
+</visible-items-limiter>
