Add issue-unmap component

--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -50,3 +50,4 @@
 @import "components/related-objects/related-reference-urls";
 @import "components/object-list-item/person-list-item";
 @import "components/loading/loading-status";
+@import "components/issue/issue-unmap";
